nohup.out
make: Warning: File 'numatest_mpi.c' has modification time 99 s in the future
mpicc -o numatest_mpi test3.c numatest_mpi.c numatest_mpi.h -O1 -fopenmp -lnuma -lm
numatest_mpi.c: In function ‘numatest’:
numatest_mpi.c:202:12: warning: implicit declaration of function ‘omp_get_num_threads’ [-Wimplicit-function-declaration]
     numt = omp_get_num_threads();
            ^~~~~~~~~~~~~~~~~~~
numatest_mpi.c:1431:12: error: label ‘out22222’ used but not defined
            goto out22222;
            ^~~~
make: *** [Makefile:5: numatest_mpi] Error 1
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
mpicc -o numatest_mpi test3.c numatest_mpi_np.c numatest_mpi.h -O1 -fopenmp -lnuma -lm
numatest_mpi_np.c: In function ‘numatest’:
numatest_mpi_np.c:200:12: warning: implicit declaration of function ‘omp_get_num_threads’ [-Wimplicit-function-declaration]
     numt = omp_get_num_threads();
            ^~~~~~~~~~~~~~~~~~~
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
make: Warning: File 'numatest_mpi.c' has modification time 410 s in the future
mpicc -o numatest_mpi test3.c numatest_mpi.c numatest_mpi.h -O1 -fopenmp -lnuma -lm
numatest_mpi.c: In function ‘numatest’:
numatest_mpi.c:202:12: warning: implicit declaration of function ‘omp_get_num_threads’ [-Wimplicit-function-declaration]
     numt = omp_get_num_threads();
            ^~~~~~~~~~~~~~~~~~~
make: warning:  Clock skew detected.  Your build may be incomplete.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: 'numatest_mpi' is up to date.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: 'stream_mpi' is up to date.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: 'stream_mpi' is up to date.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: Warning: File 'numatest_mpi.c' has modification time 171 s in the future
mpicc -o numatest_mpi test3.c numatest_mpi.c numatest_mpi.h -O1 -fopenmp -lnuma -lm
numatest_mpi.c: In function ‘numatest’:
numatest_mpi.c:202:12: warning: implicit declaration of function ‘omp_get_num_threads’ [-Wimplicit-function-declaration]
     numt = omp_get_num_threads();
            ^~~~~~~~~~~~~~~~~~~
make: warning:  Clock skew detected.  Your build may be incomplete.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: 'numatest_mpi' is up to date.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: 'stream_mpi' is up to date.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
make: 'stream_mpi' is up to date.
#Strong scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
#Weak scaling
#NUM PROCS 1
#NUM PROCS 24
#NUM PROCS 48
#NUM PROCS 72
#NUM PROCS 96
